--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 HTML, BODY {
 	background: black;
 	color: #fff;
+	font-family: sans-serif;
+	font-size: small;
+	font-variant: small-caps;
+	margin: 0; padding: 0;
+}
+
+INPUT, SELECT {
+	font-family: sans-serif;
+	font-size: small;
+	font-variant: small-caps;
 }
 
 #rightPanel {
@@ -10,4 +20,43 @@ HTML, BODY {
 	padding: 1px;
 	background: #222;
 	border-left: solid 1px #555;
+	box-shadow: 0 0 10px black;
+}
+
+LABEL {
+	display: block;
+	background: rgba(0,0,0, .1);
+	margin: 1em 0;
+	padding: 5px;
+}
+
+FIELDSET {
+	border: solid 1px #000;
+}
+
+#videoDmaPattern {
+	border-collapse: collapse;
+	display: inline;
+}
+
+#videoDmaPattern TD {
+	border: solid 1px #000;
+	width: 1.5em;
+	height: 1.5em;
+	text-align: center;
+	transition: background-color .1s linear;
+}
+
+#videoDmaPattern TD.free {
+	background-color: #0c0;
+}
+
+#videoDmaPattern TD.non-free {
+	background-color: #00c;
+}
+
+#apply {
+	display: block;
+	margin: 10px auto 0 auto;
+	padding: 5px 20px;
 }
